--- a/Buffer.html
+++ b/Buffer.html
@@ -506,75 +506,15 @@ div.tocify {
 <h3>Meta-regression: secondary moderators</h3>
 <div id="age-group" class="section level4">
 <h4>Age group</h4>
-<pre><code>## 
-##  adult  child infant 
-##      2      1      6</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 9; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0000 (SE = 0.0022)
-## tau (square root of estimated tau^2 value):             0.0030
-## I^2 (residual heterogeneity / unaccounted variability): 0.15%
-## H^2 (unaccounted variability / sampling variability):   1.00
-## R^2 (amount of heterogeneity accounted for):            0.00%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 6) = 10.6662, p-val = 0.0993
-## 
-## Test of Moderators (coefficient(s) 2:3): 
-## QM(df = 2) = 2.2971, p-val = 0.3171
-## 
-## Model Results:
-## 
-##                          estimate      se     zval    pval    ci.lb
-## intrcpt                    0.2366  0.1829   1.2932  0.1959  -0.1220
-## factor(Age_group)child     0.1483  0.3928   0.3775  0.7058  -0.6216
-## factor(Age_group)infant   -0.2085  0.1848  -1.1284  0.2592  -0.5706
-##                           ci.ub   
-## intrcpt                  0.5951   
-## factor(Age_group)child   0.9181   
-## factor(Age_group)infant  0.1537   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 <div id="income-setting" class="section level4">
 <h4>Income setting</h4>
-<pre><code>## 
-##         high lower_middle upper_middle 
-##            3            4            2</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 9; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0415 (SE = 0.0443)
-## tau (square root of estimated tau^2 value):             0.2036
-## I^2 (residual heterogeneity / unaccounted variability): 63.13%
-## H^2 (unaccounted variability / sampling variability):   2.71
-## R^2 (amount of heterogeneity accounted for):            0.00%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 6) = 12.1409, p-val = 0.0589
-## 
-## Test of Moderators (coefficient(s) 2:3): 
-## QM(df = 2) = 0.8694, p-val = 0.6475
-## 
-## Model Results:
-## 
-##                                     estimate      se     zval    pval
-## intrcpt                               0.2681  0.1667   1.6089  0.1076
-## factor(Income_setting)lower_middle   -0.1607  0.2204  -0.7290  0.4660
-## factor(Income_setting)upper_middle   -0.2024  0.2280  -0.8874  0.3749
-##                                       ci.lb   ci.ub   
-## intrcpt                             -0.0585  0.5948   
-## factor(Income_setting)lower_middle  -0.5926  0.2713   
-## factor(Income_setting)upper_middle  -0.6493  0.2446   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
-<div id="high-baseline-immunogenicity" class="section level4">
-<h4>High baseline immunogenicity</h4>
-<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
+<div id="baseline-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
+<h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 </div>
 </div>
