--- a/Extra_dose_s_.html
+++ b/Extra_dose_s_.html
@@ -492,75 +492,15 @@ div.tocify {
 <h3>Meta-regression: secondary moderators</h3>
 <div id="age-group" class="section level4">
 <h4>Age group</h4>
-<pre><code>## 
-##    adult   infant multiple 
-##        1        6        2</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 9; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0054 (SE = 0.0190)
-## tau (square root of estimated tau^2 value):             0.0735
-## I^2 (residual heterogeneity / unaccounted variability): 15.48%
-## H^2 (unaccounted variability / sampling variability):   1.18
-## R^2 (amount of heterogeneity accounted for):            73.02%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 6) = 11.0239, p-val = 0.0876
-## 
-## Test of Moderators (coefficient(s) 2:3): 
-## QM(df = 2) = 2.6737, p-val = 0.2627
-## 
-## Model Results:
-## 
-##                            estimate      se     zval    pval    ci.lb
-## intrcpt                      0.3023  0.2402   1.2584  0.2082  -0.1685
-## factor(Age_group)infant     -0.2389  0.2510  -0.9517  0.3413  -0.7308
-## factor(Age_group)multiple   -0.0181  0.2750  -0.0659  0.9474  -0.5571
-##                             ci.ub   
-## intrcpt                    0.7731   
-## factor(Age_group)infant    0.2531   
-## factor(Age_group)multiple  0.5208   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 <div id="income-setting" class="section level4">
 <h4>Income setting</h4>
-<pre><code>## 
-##          low lower_middle upper_middle 
-##            1            4            4</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 9; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0349 (SE = 0.0386)
-## tau (square root of estimated tau^2 value):             0.1867
-## I^2 (residual heterogeneity / unaccounted variability): 54.57%
-## H^2 (unaccounted variability / sampling variability):   2.20
-## R^2 (amount of heterogeneity accounted for):            0.00%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 6) = 14.0724, p-val = 0.0288
-## 
-## Test of Moderators (coefficient(s) 2:3): 
-## QM(df = 2) = 0.3672, p-val = 0.8323
-## 
-## Model Results:
-## 
-##                                     estimate      se     zval    pval
-## intrcpt                               0.1823  0.2809   0.6490  0.5163
-## factor(Income_setting)lower_middle   -0.0424  0.3079  -0.1376  0.8905
-## factor(Income_setting)upper_middle   -0.1397  0.3115  -0.4486  0.6537
-##                                       ci.lb   ci.ub   
-## intrcpt                             -0.3682  0.7329   
-## factor(Income_setting)lower_middle  -0.6458  0.5611   
-## factor(Income_setting)upper_middle  -0.7503  0.4708   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
-<div id="high-baseline-immunogenicity" class="section level4">
-<h4>High baseline immunogenicity</h4>
-<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
+<div id="baseline-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
+<h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 </div>
 </div>
