--- a/Narrow_dose_interval.html
+++ b/Narrow_dose_interval.html
@@ -485,71 +485,15 @@ div.tocify {
 <h3>Meta-regression: secondary moderators</h3>
 <div id="age-group" class="section level4">
 <h4>Age group</h4>
-<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 <div id="income-setting" class="section level4">
 <h4>Income setting</h4>
-<pre><code>## 
-##         high lower_middle 
-##            1            2</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 3; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0 (SE = 0.0089)
-## tau (square root of estimated tau^2 value):             0
-## I^2 (residual heterogeneity / unaccounted variability): 0.00%
-## H^2 (unaccounted variability / sampling variability):   1.00
-## R^2 (amount of heterogeneity accounted for):            NA%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 1) = 0.0216, p-val = 0.8831
-## 
-## Test of Moderators (coefficient(s) 2): 
-## QM(df = 1) = 0.1386, p-val = 0.7096
-## 
-## Model Results:
-## 
-##                                     estimate      se     zval    pval
-## intrcpt                              -0.0377  0.0542  -0.6969  0.4859
-## factor(Income_setting)lower_middle    0.0220  0.0591   0.3723  0.7096
-##                                       ci.lb   ci.ub   
-## intrcpt                             -0.1439  0.0684   
-## factor(Income_setting)lower_middle  -0.0938  0.1378   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
-<div id="high-baseline-immunogenicity" class="section level4">
-<h4>High baseline immunogenicity</h4>
-<pre><code>## 
-##  no yes 
-##   1   2</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 3; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0 (SE = 0.0025)
-## tau (square root of estimated tau^2 value):             0
-## I^2 (residual heterogeneity / unaccounted variability): 0.00%
-## H^2 (unaccounted variability / sampling variability):   1.00
-## R^2 (amount of heterogeneity accounted for):            NA%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 1) = 0.1281, p-val = 0.7204
-## 
-## Test of Moderators (coefficient(s) 2): 
-## QM(df = 1) = 0.0321, p-val = 0.8578
-## 
-## Model Results:
-## 
-##                           estimate      se     zval    pval    ci.lb
-## intrcpt                     0.0000  0.1096   0.0000  1.0000  -0.2148
-## factor(High_baseline)yes   -0.0200  0.1118  -0.1792  0.8578  -0.2392
-##                            ci.ub   
-## intrcpt                   0.2148   
-## factor(High_baseline)yes  0.1991   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<div id="baseline-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
+<h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 </div>
 </div>
