--- a/Probiotic.html
+++ b/Probiotic.html
@@ -485,73 +485,15 @@ div.tocify {
 <h3>Meta-regression: secondary moderators</h3>
 <div id="age-group" class="section level4">
 <h4>Age group</h4>
-<pre><code>## 
-##  adult  child infant 
-##      1      1      2</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 4; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0 (SE = 0.0366)
-## tau (square root of estimated tau^2 value):             0
-## I^2 (residual heterogeneity / unaccounted variability): 0.00%
-## H^2 (unaccounted variability / sampling variability):   1.00
-## R^2 (amount of heterogeneity accounted for):            100.00%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 1) = 0.2195, p-val = 0.6394
-## 
-## Test of Moderators (coefficient(s) 2:3): 
-## QM(df = 2) = 7.3540, p-val = 0.0253
-## 
-## Model Results:
-## 
-##                          estimate      se     zval    pval    ci.lb
-## intrcpt                    0.4520  0.3395   1.3313  0.1831  -0.2134
-## factor(Age_group)child    -0.6450  0.3603  -1.7904  0.0734  -1.3511
-## factor(Age_group)infant   -0.2583  0.3553  -0.7272  0.4671  -0.9546
-##                           ci.ub   
-## intrcpt                  1.1174   
-## factor(Age_group)child   0.0611  .
-## factor(Age_group)infant  0.4379   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 <div id="income-setting" class="section level4">
 <h4>Income setting</h4>
-<pre><code>## 
-##         high lower_middle 
-##            2            2</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 4; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0117 (SE = 0.0471)
-## tau (square root of estimated tau^2 value):             0.1080
-## I^2 (residual heterogeneity / unaccounted variability): 24.20%
-## H^2 (unaccounted variability / sampling variability):   1.32
-## R^2 (amount of heterogeneity accounted for):            68.87%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 2) = 2.3186, p-val = 0.3137
-## 
-## Test of Moderators (coefficient(s) 2): 
-## QM(df = 1) = 3.0805, p-val = 0.0792
-## 
-## Model Results:
-## 
-##                                     estimate      se     zval    pval
-## intrcpt                               0.2661  0.1500   1.7735  0.0762
-## factor(Income_setting)lower_middle   -0.3485  0.1985  -1.7551  0.0792
-##                                       ci.lb   ci.ub   
-## intrcpt                             -0.0280  0.5601  .
-## factor(Income_setting)lower_middle  -0.7376  0.0407  .
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
-<div id="high-baseline-immunogenicity" class="section level4">
-<h4>High baseline immunogenicity</h4>
-<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
+<div id="baseline-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
+<h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 </div>
 </div>
