--- a/Extra_dose_at_birth.html
+++ b/Extra_dose_at_birth.html
@@ -485,73 +485,15 @@ div.tocify {
 <h3>Meta-regression: secondary moderators</h3>
 <div id="age-group" class="section level4">
 <h4>Age group</h4>
-<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 <div id="income-setting" class="section level4">
 <h4>Income setting</h4>
-<pre><code>## 
-##         high lower_middle upper_middle 
-##            1            3            2</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 6; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0132 (SE = 0.0195)
-## tau (square root of estimated tau^2 value):             0.1148
-## I^2 (residual heterogeneity / unaccounted variability): 57.48%
-## H^2 (unaccounted variability / sampling variability):   2.35
-## R^2 (amount of heterogeneity accounted for):            0.00%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 3) = 7.1586, p-val = 0.0670
-## 
-## Test of Moderators (coefficient(s) 2:3): 
-## QM(df = 2) = 0.6940, p-val = 0.7068
-## 
-## Model Results:
-## 
-##                                     estimate      se     zval    pval
-## intrcpt                              -0.0800  0.2167  -0.3694  0.7118
-## factor(Income_setting)lower_middle    0.1957  0.2353   0.8318  0.4055
-## factor(Income_setting)upper_middle    0.1720  0.2365   0.7270  0.4672
-##                                       ci.lb   ci.ub   
-## intrcpt                             -0.5047  0.3446   
-## factor(Income_setting)lower_middle  -0.2654  0.6568   
-## factor(Income_setting)upper_middle  -0.2916  0.6356   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
-<div id="high-baseline-immunogenicity" class="section level4">
-<h4>High baseline immunogenicity</h4>
-<pre><code>## 
-##  no yes 
-##   5   1</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 6; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0037 (SE = 0.0109)
-## tau (square root of estimated tau^2 value):             0.0611
-## I^2 (residual heterogeneity / unaccounted variability): 22.83%
-## H^2 (unaccounted variability / sampling variability):   1.30
-## R^2 (amount of heterogeneity accounted for):            0.00%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 4) = 5.8569, p-val = 0.2101
-## 
-## Test of Moderators (coefficient(s) 2): 
-## QM(df = 1) = 1.3277, p-val = 0.2492
-## 
-## Model Results:
-## 
-##                           estimate      se     zval    pval    ci.lb
-## intrcpt                     0.1056  0.0553   1.9076  0.0564  -0.0029
-## factor(High_baseline)yes   -0.0962  0.0835  -1.1522  0.2492  -0.2599
-##                            ci.ub   
-## intrcpt                   0.2141  .
-## factor(High_baseline)yes  0.0675   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<div id="baseline-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
+<h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 </div>
 </div>
