--- a/Increased_vaccine_inoculum.html
+++ b/Increased_vaccine_inoculum.html
@@ -505,105 +505,15 @@ div.tocify {
 <h3>Meta-regression: secondary moderators</h3>
 <div id="age-group" class="section level4">
 <h4>Age group</h4>
-<pre><code>## 
-##    adult    child   infant multiple 
-##        3        2        5        1</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 11; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0000 (SE = 0.0039)
-## tau (square root of estimated tau^2 value):             0.0020
-## I^2 (residual heterogeneity / unaccounted variability): 0.04%
-## H^2 (unaccounted variability / sampling variability):   1.00
-## R^2 (amount of heterogeneity accounted for):            7.45%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 7) = 12.9934, p-val = 0.0723
-## 
-## Test of Moderators (coefficient(s) 2:4): 
-## QM(df = 3) = 3.9241, p-val = 0.2698
-## 
-## Model Results:
-## 
-##                            estimate      se     zval    pval    ci.lb
-## intrcpt                      0.2139  0.0924   2.3161  0.0206   0.0329
-## factor(Age_group)child      -0.1603  0.1186  -1.3508  0.1768  -0.3928
-## factor(Age_group)infant     -0.1933  0.0986  -1.9612  0.0499  -0.3865
-## factor(Age_group)multiple   -0.2196  0.2211  -0.9934  0.3205  -0.6529
-##                              ci.ub   
-## intrcpt                     0.3949  *
-## factor(Age_group)child      0.0723   
-## factor(Age_group)infant    -0.0001  *
-## factor(Age_group)multiple   0.2137   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 <div id="income-setting" class="section level4">
 <h4>Income setting</h4>
-<pre><code>## 
-##          low lower_middle upper_middle 
-##            2            5            4</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 11; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0096 (SE = 0.0126)
-## tau (square root of estimated tau^2 value):             0.0981
-## I^2 (residual heterogeneity / unaccounted variability): 39.88%
-## H^2 (unaccounted variability / sampling variability):   1.66
-## R^2 (amount of heterogeneity accounted for):            0.00%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 8) = 14.5079, p-val = 0.0694
-## 
-## Test of Moderators (coefficient(s) 2:3): 
-## QM(df = 2) = 2.5282, p-val = 0.2825
-## 
-## Model Results:
-## 
-##                                     estimate      se     zval    pval
-## intrcpt                               0.0735  0.0944   0.7786  0.4362
-## factor(Income_setting)lower_middle   -0.0477  0.1162  -0.4108  0.6812
-## factor(Income_setting)upper_middle    0.1400  0.1355   1.0334  0.3014
-##                                       ci.lb   ci.ub   
-## intrcpt                             -0.1115  0.2585   
-## factor(Income_setting)lower_middle  -0.2754  0.1800   
-## factor(Income_setting)upper_middle  -0.1255  0.4055   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
-<div id="high-baseline-immunogenicity" class="section level4">
-<h4>High baseline immunogenicity</h4>
-<pre><code>## 
-##  no yes 
-##  10   1</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 11; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0000 (SE = 0.0055)
-## tau (square root of estimated tau^2 value):             0.0011
-## I^2 (residual heterogeneity / unaccounted variability): 0.01%
-## H^2 (unaccounted variability / sampling variability):   1.00
-## R^2 (amount of heterogeneity accounted for):            70.45%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 9) = 14.9979, p-val = 0.0910
-## 
-## Test of Moderators (coefficient(s) 2): 
-## QM(df = 1) = 1.9213, p-val = 0.1657
-## 
-## Model Results:
-## 
-##                           estimate      se     zval    pval    ci.lb
-## intrcpt                     0.0768  0.0374   2.0538  0.0400   0.0035
-## factor(High_baseline)yes   -0.0833  0.0601  -1.3861  0.1657  -0.2012
-##                            ci.ub   
-## intrcpt                   0.1501  *
-## factor(High_baseline)yes  0.0345   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<div id="baseline-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
+<h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 </div>
 </div>
@@ -651,20 +561,20 @@ div.tocify {
 ## Multivariate Meta-Analysis Model (k = 18; method: REML)
 ## 
 ##   logLik  Deviance       AIC       BIC      AICc  
-##   9.5279  -19.0557  -15.0557  -13.3893  -14.1986  
+##   9.3297  -18.6595  -14.6595  -12.9931  -13.8023  
 ## 
 ## Variance Components: 
 ## 
 ##             estim    sqrt  nlvls  fixed     factor
-## sigma^2    0.0019  0.0436      7     no  Reference
+## sigma^2    0.0020  0.0444      8     no  Reference
 ## 
 ## Test for Heterogeneity: 
 ## Q(df = 17) = 26.2255, p-val = 0.0704
 ## 
 ## Model Results:
 ## 
-## estimate      se    zval    pval    ci.lb   ci.ub   
-##   0.0515  0.0276  1.8694  0.0616  -0.0025  0.1055  .
+## estimate      se    zval    pval   ci.lb   ci.ub   
+##   0.0593  0.0257  2.3044  0.0212  0.0089  0.1097  *
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -677,24 +587,24 @@ div.tocify {
 ## Variance Components: 
 ## 
 ##             estim    sqrt  nlvls  fixed     factor
-## sigma^2    0.0020  0.0445      7     no  Reference
+## sigma^2    0.0021  0.0457      8     no  Reference
 ## 
 ## Test for Residual Heterogeneity: 
 ## QE(df = 15) = 23.4345, p-val = 0.0753
 ## 
 ## Test of Moderators (coefficient(s) 2:3): 
-## QM(df = 2) = 2.0491, p-val = 0.3590
+## QM(df = 2) = 2.3801, p-val = 0.3042
 ## 
 ## Model Results:
 ## 
 ##                         estimate      se     zval    pval    ci.lb   ci.ub
-## intrcpt                   0.0757  0.0327   2.3165  0.0205   0.0117  0.1398
-## Measure_of_SCOPV2 N-AB   -0.0602  0.0616  -0.9786  0.3278  -0.1809  0.0604
-## Measure_of_SCOPV3 N-AB   -0.0580  0.0444  -1.3068  0.1913  -0.1450  0.0290
-##                          
-## intrcpt                 *
-## Measure_of_SCOPV2 N-AB   
-## Measure_of_SCOPV3 N-AB   
+## intrcpt                   0.0841  0.0306   2.7457  0.0060   0.0241  0.1442
+## Measure_of_SCOPV2 N-AB   -0.0665  0.0612  -1.0867  0.2772  -0.1864  0.0534
+## Measure_of_SCOPV3 N-AB   -0.0620  0.0446  -1.3904  0.1644  -0.1493  0.0254
+##                           
+## intrcpt                 **
+## Measure_of_SCOPV2 N-AB    
+## Measure_of_SCOPV3 N-AB    
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
