--- a/RVV_separated_from_OPV.html
+++ b/RVV_separated_from_OPV.html
@@ -520,68 +520,55 @@ div.tocify {
 </div>
 <div id="income-setting" class="section level4">
 <h4>Income setting</h4>
-<pre><code>## 
-##         high          low lower_middle upper_middle 
-##            2            2            2            8</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 14; tau^2 estimator: REML)
+<pre><code>## [1] &quot;Rotavirus-specific analysis performed owing to absence of significant residual heterogeneity for OPV studies&quot;
 ## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0006 (SE = 0.0009)
-## tau (square root of estimated tau^2 value):             0.0239
-## I^2 (residual heterogeneity / unaccounted variability): 31.40%
-## H^2 (unaccounted variability / sampling variability):   1.46
-## R^2 (amount of heterogeneity accounted for):            10.45%
+##  low_lowermiddle uppermiddle_high 
+##                2                6</code></pre>
+<pre><code>## 
+## Multivariate Meta-Analysis Model (k = 8; method: REML)
+## 
+## Variance Components: none
 ## 
 ## Test for Residual Heterogeneity: 
-## QE(df = 10) = 23.5902, p-val = 0.0088
+## QE(df = 6) = 18.9604, p-val = 0.0042
 ## 
-## Test of Moderators (coefficient(s) 2:4): 
-## QM(df = 3) = 8.4088, p-val = 0.0383
+## Test of Moderators (coefficient(s) 2): 
+## QM(df = 1) = 0.3725, p-val = 0.5417
 ## 
 ## Model Results:
 ## 
-##                                     estimate      se     zval    pval
-## intrcpt                               1.0053  0.3527   2.8504  0.0044
-## factor(Income_setting)low            -0.8966  0.3678  -2.4378  0.0148
-## factor(Income_setting)lower_middle   -0.9697  0.3677  -2.6375  0.0084
-## factor(Income_setting)upper_middle   -0.9835  0.3531  -2.7855  0.0053
-##                                       ci.lb    ci.ub    
-## intrcpt                              0.3140   1.6965  **
-## factor(Income_setting)low           -1.6175  -0.1757   *
-## factor(Income_setting)lower_middle  -1.6904  -0.2491  **
-## factor(Income_setting)upper_middle  -1.6755  -0.2915  **
+##                                       estimate      se     zval    pval
+## intrcpt                                 0.1174  0.1046   1.1220  0.2619
+## factor(Income_group)uppermiddle_high   -0.0646  0.1058  -0.6103  0.5417
+##                                         ci.lb   ci.ub   
+## intrcpt                               -0.0877  0.3224   
+## factor(Income_group)uppermiddle_high  -0.2720  0.1428   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
-<div id="high-baseline-immunogenicity" class="section level4">
-<h4>High baseline immunogenicity</h4>
+<div id="baseline-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
+<h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
+<pre><code>## [1] &quot;Rotavirus-specific analysis performed owing to absence of significant residual heterogeneity for OPV studies&quot;</code></pre>
 <pre><code>## 
-##  no yes 
-##  11   3</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 14; tau^2 estimator: REML)
+## Multivariate Meta-Analysis Model (k = 8; method: REML)
 ## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0005 (SE = 0.0008)
-## tau (square root of estimated tau^2 value):             0.0234
-## I^2 (residual heterogeneity / unaccounted variability): 26.76%
-## H^2 (unaccounted variability / sampling variability):   1.37
-## R^2 (amount of heterogeneity accounted for):            14.41%
+## Variance Components: none
 ## 
 ## Test for Residual Heterogeneity: 
-## QE(df = 12) = 28.4775, p-val = 0.0047
+## QE(df = 6) = 13.5770, p-val = 0.0347
 ## 
 ## Test of Moderators (coefficient(s) 2): 
-## QM(df = 1) = 3.3636, p-val = 0.0667
+## QM(df = 1) = 5.7559, p-val = 0.0164
 ## 
 ## Model Results:
 ## 
-##                           estimate      se     zval    pval    ci.lb
-## intrcpt                     0.1318  0.0599   2.2024  0.0276   0.0145
-## factor(High_baseline)yes   -0.1140  0.0621  -1.8340  0.0667  -0.2357
-##                            ci.ub   
-## intrcpt                   0.2492  *
-## factor(High_baseline)yes  0.0078  .
+##                                      estimate      se     zval    pval
+## intrcpt                                0.4711  0.1745   2.7002  0.0069
+## asin(sqrt(Baseline_seroconversion))   -0.3249  0.1354  -2.3991  0.0164
+##                                        ci.lb    ci.ub    
+## intrcpt                               0.1292   0.8131  **
+## asin(sqrt(Baseline_seroconversion))  -0.5904  -0.0595   *
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
