--- a/Vitamin_A.html
+++ b/Vitamin_A.html
@@ -485,71 +485,15 @@ div.tocify {
 <h3>Meta-regression: secondary moderators</h3>
 <div id="age-group" class="section level4">
 <h4>Age group</h4>
-<pre><code>## 
-##  child infant 
-##      1      4</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 5; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0 (SE = 0.0008)
-## tau (square root of estimated tau^2 value):             0
-## I^2 (residual heterogeneity / unaccounted variability): 0.00%
-## H^2 (unaccounted variability / sampling variability):   1.00
-## R^2 (amount of heterogeneity accounted for):            NA%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 3) = 1.0419, p-val = 0.7911
-## 
-## Test of Moderators (coefficient(s) 2): 
-## QM(df = 1) = 1.0247, p-val = 0.3114
-## 
-## Model Results:
-## 
-##                          estimate      se     zval    pval    ci.lb
-## intrcpt                    0.1913  0.1778   1.0758  0.2820  -0.1572
-## factor(Age_group)infant   -0.1804  0.1782  -1.0123  0.3114  -0.5297
-##                           ci.ub   
-## intrcpt                  0.5399   
-## factor(Age_group)infant  0.1689   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 <div id="income-setting" class="section level4">
 <h4>Income setting</h4>
-<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
-<div id="high-baseline-immunogenicity" class="section level4">
-<h4>High baseline immunogenicity</h4>
-<pre><code>## 
-##  no yes 
-##   4   1</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 5; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0 (SE = 0.0024)
-## tau (square root of estimated tau^2 value):             0
-## I^2 (residual heterogeneity / unaccounted variability): 0.00%
-## H^2 (unaccounted variability / sampling variability):   1.00
-## R^2 (amount of heterogeneity accounted for):            NA%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 3) = 1.7993, p-val = 0.6151
-## 
-## Test of Moderators (coefficient(s) 2): 
-## QM(df = 1) = 0.2673, p-val = 0.6052
-## 
-## Model Results:
-## 
-##                           estimate      se     zval    pval    ci.lb
-## intrcpt                     0.0246  0.0274   0.8957  0.3704  -0.0292
-## factor(High_baseline)yes   -0.0156  0.0302  -0.5170  0.6052  -0.0747
-##                            ci.ub   
-## intrcpt                   0.0783   
-## factor(High_baseline)yes  0.0435   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<div id="baseline-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
+<h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 </div>
 </div>
