--- a/Antihelminthic.html
+++ b/Antihelminthic.html
@@ -466,6 +466,10 @@ div.tocify {
 <h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
 <pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
+<div id="number-of-doses" class="section level4">
+<h4>Number of doses</h4>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
+</div>
 </div>
 </div>
 <div id="opv-specific-analysis" class="section level2">
