--- a/Zinc.html
+++ b/Zinc.html
@@ -549,17 +549,46 @@ div.tocify {
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
+<div id="number-of-doses" class="section level4">
+<h4>Number of doses</h4>
+<pre><code>## 
+## 2 4 
+## 5 1</code></pre>
+<pre><code>## 
+## Mixed-Effects Model (k = 6; tau^2 estimator: REML)
+## 
+## tau^2 (estimated amount of residual heterogeneity):     0.0961 (SE = 0.0972)
+## tau (square root of estimated tau^2 value):             0.3099
+## I^2 (residual heterogeneity / unaccounted variability): 71.41%
+## H^2 (unaccounted variability / sampling variability):   3.50
+## R^2 (amount of heterogeneity accounted for):            0.00%
+## 
+## Test for Residual Heterogeneity: 
+## QE(df = 4) = 11.9587, p-val = 0.0177
+## 
+## Test of Moderators (coefficient(s) 2): 
+## QM(df = 1) = 0.1472, p-val = 0.7012
+## 
+## Model Results:
+## 
+##          estimate      se     zval    pval    ci.lb   ci.ub   
+## intrcpt    0.2707  0.4631   0.5845  0.5589  -0.6370  1.1783   
+## N_doses   -0.0697  0.1815  -0.3837  0.7012  -0.4254  0.2861   
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+</div>
 </div>
 </div>
 <div id="opv-specific-analysis" class="section level2">
 <h2>OPV-specific analysis</h2>
 <div id="forest-plot-1" class="section level3">
 <h3>Forest plot</h3>
-<p><img src="Zinc_files/figure-html/unnamed-chunk-15-1.png" width="1152" /></p>
+<p><img src="Zinc_files/figure-html/unnamed-chunk-16-1.png" width="1152" /></p>
 </div>
 <div id="funnel-plot-1" class="section level3">
 <h3>Funnel plot</h3>
-<p><img src="Zinc_files/figure-html/unnamed-chunk-16-1.png" width="576" /></p>
+<p><img src="Zinc_files/figure-html/unnamed-chunk-17-1.png" width="576" /></p>
 </div>
 <div id="eggers-test-1" class="section level3">
 <h3>Egger’s test</h3>
