--- a/Breastfeeding_withheld.html
+++ b/Breastfeeding_withheld.html
@@ -597,17 +597,46 @@ div.tocify {
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
+<div id="number-of-doses" class="section level4">
+<h4>Number of doses</h4>
+<pre><code>## 
+## 2 3 
+## 5 2</code></pre>
+<pre><code>## 
+## Mixed-Effects Model (k = 7; tau^2 estimator: REML)
+## 
+## tau^2 (estimated amount of residual heterogeneity):     0.0493 (SE = 0.0505)
+## tau (square root of estimated tau^2 value):             0.2221
+## I^2 (residual heterogeneity / unaccounted variability): 63.21%
+## H^2 (unaccounted variability / sampling variability):   2.72
+## R^2 (amount of heterogeneity accounted for):            0.00%
+## 
+## Test for Residual Heterogeneity: 
+## QE(df = 5) = 12.7438, p-val = 0.0259
+## 
+## Test of Moderators (coefficient(s) 2): 
+## QM(df = 1) = 0.6523, p-val = 0.4193
+## 
+## Model Results:
+## 
+##          estimate      se     zval    pval    ci.lb   ci.ub   
+## intrcpt    0.3679  0.5582   0.6591  0.5098  -0.7262  1.4619   
+## N_doses   -0.1951  0.2415  -0.8077  0.4193  -0.6684  0.2783   
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+</div>
 </div>
 </div>
 <div id="opv-specific-analysis" class="section level2">
 <h2>OPV-specific analysis</h2>
 <div id="forest-plot-1" class="section level3">
 <h3>Forest plot</h3>
-<p><img src="Breastfeeding_withheld_files/figure-html/unnamed-chunk-15-1.png" width="1152" /></p>
+<p><img src="Breastfeeding_withheld_files/figure-html/unnamed-chunk-16-1.png" width="1152" /></p>
 </div>
 <div id="funnel-plot-1" class="section level3">
 <h3>Funnel plot</h3>
-<p><img src="Breastfeeding_withheld_files/figure-html/unnamed-chunk-16-1.png" width="576" /></p>
+<p><img src="Breastfeeding_withheld_files/figure-html/unnamed-chunk-17-1.png" width="576" /></p>
 </div>
 <div id="eggers-test-1" class="section level3">
 <h3>Egger’s test</h3>
