--- a/OPV_valence.html
+++ b/OPV_valence.html
@@ -526,17 +526,46 @@ div.tocify {
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
+<div id="number-of-doses" class="section level4">
+<h4>Number of doses</h4>
+<pre><code>## 
+## 1 2 3 4 
+## 3 1 1 1</code></pre>
+<pre><code>## 
+## Mixed-Effects Model (k = 6; tau^2 estimator: REML)
+## 
+## tau^2 (estimated amount of residual heterogeneity):     0.1823 (SE = 0.1404)
+## tau (square root of estimated tau^2 value):             0.4270
+## I^2 (residual heterogeneity / unaccounted variability): 98.72%
+## H^2 (unaccounted variability / sampling variability):   78.35
+## R^2 (amount of heterogeneity accounted for):            18.22%
+## 
+## Test for Residual Heterogeneity: 
+## QE(df = 4) = 89.5007, p-val &lt; .0001
+## 
+## Test of Moderators (coefficient(s) 2): 
+## QM(df = 1) = 2.2714, p-val = 0.1318
+## 
+## Model Results:
+## 
+##          estimate      se     zval    pval    ci.lb   ci.ub   
+## intrcpt    0.9102  0.3703   2.4580  0.0140   0.1844  1.6359  *
+## N_doses   -0.2348  0.1558  -1.5071  0.1318  -0.5401  0.0705   
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+</div>
 </div>
 </div>
 <div id="opv-specific-analysis" class="section level2">
 <h2>OPV-specific analysis</h2>
 <div id="forest-plot-1" class="section level3">
 <h3>Forest plot</h3>
-<p><img src="OPV_valence_files/figure-html/unnamed-chunk-15-1.png" width="1248" /></p>
+<p><img src="OPV_valence_files/figure-html/unnamed-chunk-16-1.png" width="1248" /></p>
 </div>
 <div id="funnel-plot-1" class="section level3">
 <h3>Funnel plot</h3>
-<p><img src="OPV_valence_files/figure-html/unnamed-chunk-16-1.png" width="576" /></p>
+<p><img src="OPV_valence_files/figure-html/unnamed-chunk-17-1.png" width="576" /></p>
 </div>
 <div id="eggers-test-1" class="section level3">
 <h3>Egger’s test</h3>
