--- a/RVV_separated_from_OPV.html
+++ b/RVV_separated_from_OPV.html
@@ -573,17 +573,43 @@ div.tocify {
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
+<div id="number-of-doses" class="section level4">
+<h4>Number of doses</h4>
+<pre><code>## [1] &quot;Rotavirus-specific analysis performed owing to absence of significant residual heterogeneity for OPV studies&quot;
+## 
+## 1 2 3 
+## 2 3 3</code></pre>
+<pre><code>## 
+## Multivariate Meta-Analysis Model (k = 8; method: REML)
+## 
+## Variance Components: none
+## 
+## Test for Residual Heterogeneity: 
+## QE(df = 6) = 13.8207, p-val = 0.0317
+## 
+## Test of Moderators (coefficient(s) 2): 
+## QM(df = 1) = 5.5122, p-val = 0.0189
+## 
+## Model Results:
+## 
+##          estimate      se     zval    pval    ci.lb    ci.ub   
+## intrcpt    0.6113  0.2378   2.5708  0.0101   0.1452   1.0774  *
+## N_doses   -0.1878  0.0800  -2.3478  0.0189  -0.3446  -0.0310  *
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+</div>
 </div>
 </div>
 <div id="opv-specific-analysis" class="section level2">
 <h2>OPV-specific analysis</h2>
 <div id="forest-plot-1" class="section level3">
 <h3>Forest plot</h3>
-<p><img src="RVV_separated_from_OPV_files/figure-html/unnamed-chunk-15-1.png" width="1248" /></p>
+<p><img src="RVV_separated_from_OPV_files/figure-html/unnamed-chunk-16-1.png" width="1248" /></p>
 </div>
 <div id="funnel-plot-1" class="section level3">
 <h3>Funnel plot</h3>
-<p><img src="RVV_separated_from_OPV_files/figure-html/unnamed-chunk-16-1.png" width="576" /></p>
+<p><img src="RVV_separated_from_OPV_files/figure-html/unnamed-chunk-17-1.png" width="576" /></p>
 </div>
 <div id="eggers-test-1" class="section level3">
 <h3>Egger’s test</h3>
