--- a/Vitamin_A.html
+++ b/Vitamin_A.html
@@ -495,17 +495,21 @@ div.tocify {
 <h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
 <pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
+<div id="number-of-doses" class="section level4">
+<h4>Number of doses</h4>
+<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
+</div>
 </div>
 </div>
 <div id="opv-specific-analysis" class="section level2">
 <h2>OPV-specific analysis</h2>
 <div id="forest-plot-1" class="section level3">
 <h3>Forest plot</h3>
-<p><img src="Vitamin_A_files/figure-html/unnamed-chunk-15-1.png" width="1248" /></p>
+<p><img src="Vitamin_A_files/figure-html/unnamed-chunk-16-1.png" width="1248" /></p>
 </div>
 <div id="funnel-plot-1" class="section level3">
 <h3>Funnel plot</h3>
-<p><img src="Vitamin_A_files/figure-html/unnamed-chunk-16-1.png" width="576" /></p>
+<p><img src="Vitamin_A_files/figure-html/unnamed-chunk-17-1.png" width="576" /></p>
 </div>
 <div id="eggers-test-1" class="section level3">
 <h3>Egger’s test</h3>
