--- a/Breastfeeding_withheld.html
+++ b/Breastfeeding_withheld.html
@@ -619,9 +619,9 @@ div.tocify {
 ## 
 ## Model Results:
 ## 
-##          estimate      se     zval    pval    ci.lb   ci.ub   
-## intrcpt    0.3679  0.5582   0.6591  0.5098  -0.7262  1.4619   
-## N_doses   -0.1951  0.2415  -0.8077  0.4193  -0.6684  0.2783   
+##                   estimate      se     zval    pval    ci.lb   ci.ub   
+## intrcpt            -0.0222  0.1251  -0.1777  0.8589  -0.2674  0.2230   
+## factor(N_doses)3   -0.1951  0.2415  -0.8077  0.4193  -0.6684  0.2783   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
