--- a/Zinc.html
+++ b/Zinc.html
@@ -571,9 +571,9 @@ div.tocify {
 ## 
 ## Model Results:
 ## 
-##          estimate      se     zval    pval    ci.lb   ci.ub   
-## intrcpt    0.2707  0.4631   0.5845  0.5589  -0.6370  1.1783   
-## N_doses   -0.0697  0.1815  -0.3837  0.7012  -0.4254  0.2861   
+##                   estimate      se     zval    pval    ci.lb   ci.ub   
+## intrcpt             0.1314  0.1660   0.7915  0.4287  -0.1940  0.4567   
+## factor(N_doses)4   -0.1393  0.3631  -0.3837  0.7012  -0.8509  0.5723   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
