--- a/Antihelminthic.html
+++ b/Antihelminthic.html
@@ -462,12 +462,8 @@ div.tocify {
 <h4>Income setting</h4>
 <pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
-<div id="baseline-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
-<h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
-<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
-</div>
-<div id="number-of-doses" class="section level4">
-<h4>Number of doses</h4>
+<div id="background-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
+<h4>Background immunogenicity (seroconversion rate in the control group)</h4>
 <pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 </div>
