--- a/Extra_dose_s_.html
+++ b/Extra_dose_s_.html
@@ -498,12 +498,8 @@ div.tocify {
 <h4>Income setting</h4>
 <pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
-<div id="baseline-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
-<h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
-<pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
-</div>
-<div id="number-of-doses" class="section level4">
-<h4>Number of doses</h4>
+<div id="background-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
+<h4>Background immunogenicity (seroconversion rate in the control group)</h4>
 <pre><code>## [1] &quot;Residual heterogeneity not significant (p&gt;0.05)&quot;</code></pre>
 </div>
 </div>
@@ -512,11 +508,11 @@ div.tocify {
 <h2>OPV-specific analysis</h2>
 <div id="forest-plot-1" class="section level3">
 <h3>Forest plot</h3>
-<p><img src="Extra_dose_s__files/figure-html/unnamed-chunk-16-1.png" width="1056" /></p>
+<p><img src="Extra_dose_s__files/figure-html/unnamed-chunk-15-1.png" width="1056" /></p>
 </div>
 <div id="funnel-plot-1" class="section level3">
 <h3>Funnel plot</h3>
-<p><img src="Extra_dose_s__files/figure-html/unnamed-chunk-17-1.png" width="576" /></p>
+<p><img src="Extra_dose_s__files/figure-html/unnamed-chunk-16-1.png" width="576" /></p>
 </div>
 <div id="eggers-test-1" class="section level3">
 <h3>Egger’s test</h3>
