--- a/OPV_valence.html
+++ b/OPV_valence.html
@@ -497,8 +497,8 @@ div.tocify {
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
-<div id="baseline-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
-<h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
+<div id="background-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
+<h4>Background immunogenicity (seroconversion rate in the control group)</h4>
 <pre><code>## 
 ## Mixed-Effects Model (k = 6; tau^2 estimator: REML)
 ## 
@@ -526,48 +526,17 @@ div.tocify {
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
-<div id="number-of-doses" class="section level4">
-<h4>Number of doses</h4>
-<pre><code>## 
-## 1 2 3 4 
-## 3 1 1 1</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 6; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0.3660 (SE = 0.3980)
-## tau (square root of estimated tau^2 value):             0.6050
-## I^2 (residual heterogeneity / unaccounted variability): 95.01%
-## H^2 (unaccounted variability / sampling variability):   20.05
-## R^2 (amount of heterogeneity accounted for):            0.00%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 2) = 51.7938, p-val &lt; .0001
-## 
-## Test of Moderators (coefficient(s) 2:4): 
-## QM(df = 3) = 1.4504, p-val = 0.6938
-## 
-## Model Results:
-## 
-##                   estimate      se     zval    pval    ci.lb   ci.ub   
-## intrcpt             0.7190  0.3640   1.9752  0.0482   0.0055  1.4324  *
-## factor(N_doses)2   -0.2324  0.7108  -0.3270  0.7437  -1.6254  1.1607   
-## factor(N_doses)3   -0.7228  0.7062  -1.0235  0.3061  -2.1069  0.6613   
-## factor(N_doses)4   -0.6219  0.7073  -0.8792  0.3793  -2.0082  0.7644   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
-</div>
 </div>
 </div>
 <div id="opv-specific-analysis" class="section level2">
 <h2>OPV-specific analysis</h2>
 <div id="forest-plot-1" class="section level3">
 <h3>Forest plot</h3>
-<p><img src="OPV_valence_files/figure-html/unnamed-chunk-16-1.png" width="1248" /></p>
+<p><img src="OPV_valence_files/figure-html/unnamed-chunk-15-1.png" width="1248" /></p>
 </div>
 <div id="funnel-plot-1" class="section level3">
 <h3>Funnel plot</h3>
-<p><img src="OPV_valence_files/figure-html/unnamed-chunk-17-1.png" width="576" /></p>
+<p><img src="OPV_valence_files/figure-html/unnamed-chunk-16-1.png" width="576" /></p>
 </div>
 <div id="eggers-test-1" class="section level3">
 <h3>Egger’s test</h3>
