--- a/RVV_separated_from_OPV.html
+++ b/RVV_separated_from_OPV.html
@@ -547,8 +547,8 @@ div.tocify {
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
-<div id="baseline-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
-<h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
+<div id="background-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
+<h4>Background immunogenicity (seroconversion rate in the control group)</h4>
 <pre><code>## [1] &quot;Rotavirus-specific analysis performed owing to absence of significant residual heterogeneity for OPV studies&quot;</code></pre>
 <pre><code>## 
 ## Multivariate Meta-Analysis Model (k = 8; method: REML)
@@ -573,44 +573,17 @@ div.tocify {
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
-<div id="number-of-doses" class="section level4">
-<h4>Number of doses</h4>
-<pre><code>## [1] &quot;Rotavirus-specific analysis performed owing to absence of significant residual heterogeneity for OPV studies&quot;
-## 
-## 1 2 3 
-## 2 3 3</code></pre>
-<pre><code>## 
-## Multivariate Meta-Analysis Model (k = 8; method: REML)
-## 
-## Variance Components: none
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 5) = 5.8327, p-val = 0.3228
-## 
-## Test of Moderators (coefficient(s) 2:3): 
-## QM(df = 2) = 13.5002, p-val = 0.0012
-## 
-## Model Results:
-## 
-##                   estimate      se     zval    pval    ci.lb    ci.ub     
-## intrcpt             1.0696  0.2779   3.8484  0.0001   0.5249   1.6143  ***
-## factor(N_doses)2   -0.9873  0.2940  -3.3586  0.0008  -1.5634  -0.4111  ***
-## factor(N_doses)3   -1.0196  0.2784  -3.6622  0.0003  -1.5652  -0.4739  ***
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
-</div>
 </div>
 </div>
 <div id="opv-specific-analysis" class="section level2">
 <h2>OPV-specific analysis</h2>
 <div id="forest-plot-1" class="section level3">
 <h3>Forest plot</h3>
-<p><img src="RVV_separated_from_OPV_files/figure-html/unnamed-chunk-16-1.png" width="1248" /></p>
+<p><img src="RVV_separated_from_OPV_files/figure-html/unnamed-chunk-15-1.png" width="1248" /></p>
 </div>
 <div id="funnel-plot-1" class="section level3">
 <h3>Funnel plot</h3>
-<p><img src="RVV_separated_from_OPV_files/figure-html/unnamed-chunk-17-1.png" width="576" /></p>
+<p><img src="RVV_separated_from_OPV_files/figure-html/unnamed-chunk-16-1.png" width="576" /></p>
 </div>
 <div id="eggers-test-1" class="section level3">
 <h3>Egger’s test</h3>
