--- a/Zinc.html
+++ b/Zinc.html
@@ -520,8 +520,8 @@ div.tocify {
 <h4>Income setting</h4>
 <pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
 </div>
-<div id="baseline-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
-<h4>Baseline immunogenicity (seroconversion rate in the control group)</h4>
+<div id="background-immunogenicity-seroconversion-rate-in-the-control-group" class="section level4">
+<h4>Background immunogenicity (seroconversion rate in the control group)</h4>
 <pre><code>## 
 ## Mixed-Effects Model (k = 6; tau^2 estimator: REML)
 ## 
@@ -549,46 +549,17 @@ div.tocify {
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
-<div id="number-of-doses" class="section level4">
-<h4>Number of doses</h4>
-<pre><code>## 
-## 2 4 
-## 5 1</code></pre>
-<pre><code>## 
-## Mixed-Effects Model (k = 6; tau^2 estimator: REML)
-## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0961 (SE = 0.0972)
-## tau (square root of estimated tau^2 value):             0.3099
-## I^2 (residual heterogeneity / unaccounted variability): 71.41%
-## H^2 (unaccounted variability / sampling variability):   3.50
-## R^2 (amount of heterogeneity accounted for):            0.00%
-## 
-## Test for Residual Heterogeneity: 
-## QE(df = 4) = 11.9587, p-val = 0.0177
-## 
-## Test of Moderators (coefficient(s) 2): 
-## QM(df = 1) = 0.1472, p-val = 0.7012
-## 
-## Model Results:
-## 
-##                   estimate      se     zval    pval    ci.lb   ci.ub   
-## intrcpt             0.1314  0.1660   0.7915  0.4287  -0.1940  0.4567   
-## factor(N_doses)4   -0.1393  0.3631  -0.3837  0.7012  -0.8509  0.5723   
-## 
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
-</div>
 </div>
 </div>
 <div id="opv-specific-analysis" class="section level2">
 <h2>OPV-specific analysis</h2>
 <div id="forest-plot-1" class="section level3">
 <h3>Forest plot</h3>
-<p><img src="Zinc_files/figure-html/unnamed-chunk-16-1.png" width="1152" /></p>
+<p><img src="Zinc_files/figure-html/unnamed-chunk-15-1.png" width="1152" /></p>
 </div>
 <div id="funnel-plot-1" class="section level3">
 <h3>Funnel plot</h3>
-<p><img src="Zinc_files/figure-html/unnamed-chunk-17-1.png" width="576" /></p>
+<p><img src="Zinc_files/figure-html/unnamed-chunk-16-1.png" width="576" /></p>
 </div>
 <div id="eggers-test-1" class="section level3">
 <h3>Egger’s test</h3>
